Ändrat lite i koden samt stylat

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
 
- <!-- MINIRÄKNARE -->
-
+<header id="cal">CALCULATOR</header>
 
  <div id="container">
     <div id="calculator">
